CLI (#15)
* appassembler plugin

* cli refactoring